--- a/sim/Makefile
+++ b/sim/Makefile
@@ -3,7 +3,6 @@ OOMMF="/home/david/opt/oommf-1.2a5bis/oommf.tcl"
 all:
 	make relaxation
 	make dynamics
-	make data
 
 relaxation:
 	for w in 0 25 50 75 100; do \
@@ -23,7 +22,8 @@ data:
 	for w in 0 25 50 75 100; do \
 		tclsh "~/opt/oommf-1.2a5bis/oommf.tcl" avf2ovf -grid irreg \
 		InitialMagnetisation_w$${w}.omf > InitialMagnetisation_w$${w}_ordered.omf; \
-		python ../OOMMF_generate_data.py --omfs "omfs_w$${w}" \
+		python ../data_plot/OOMMF_generate_data.py \
+	   	--omfs "omfs_w$${w}" \
 		--initial_state "InitialMagnetisation_w$${w}_ordered.omf" \
 		--out_name "w$${w}" \
 		--Ms "0.658e6"; \
@@ -31,19 +31,22 @@ data:
 
 plots_squared:
 	for w in 0; do \
-		python ../OOMMF_process_data.py --omfs "omfs_w$${w}" \
+		python ../data_plot/OOMMF_process_data.py \
+		--omfs "omfs_w$${w}" \
 	   	--out_name "w$${w}" --vminf 1 --vmaxf 10 --ylim 0 30 \
 		--scale power2 --pdf_name "spectra_w$${w}_squared"; \
 	done
 	for w in 25 50 75 100; do \
-		python ../OOMMF_process_data.py --omfs "omfs_w$${w}" \
+		python ../data_plot/OOMMF_process_data.py \
+	   	--omfs "omfs_w$${w}" \
 	   	--out_name "w$${w}" --vminf 1 --vmaxf 200 --ylim 0 30 \
 		--scale power2 --pdf_name "spectra_w$${w}_squared"; \
 	done
 
 plots_log:
 	for w in 0 25 50 75 100; do \
-		python ../OOMMF_process_data.py --omfs "omfs_w$${w}" \
+		python ../data_plot/OOMMF_process_data.py \
+	   	--omfs "omfs_w$${w}" \
 	   	--out_name "w$${w}" --vminf 9 --vmaxf 1 --ylim 0 30 \
 		--pdf_name "spectra_w$${w}_log10" \
 	   	--get_data "spectra_w$${w}_log10.dat"; \
