Fixed call to script by manually calling oommf with tcl (the oommf script in usr-local-bin needs to be updated)

--- a/sim/Makefile
+++ b/sim/Makefile
@@ -1,24 +1,29 @@
+#!/bin/bash
+
 all:
 	make relaxation
 	make dynamics
 
 relaxation:
 	@for w in 0 25 50 75 100; do \
-		oommf boxsi -threads 4 -parameters "w $${w}" OOMMF_static.mif; \
+		tclsh /usr/local/oommf/oommf/oommf.tcl \
+		boxsi -threads 4 -parameters "w $${w}" OOMMF_static.mif; \
 		mv InitialMagnetisation-Oxs*.omf InitialMagnetisation_w$${w}.omf; \
 		mv InitialMagnetisation.odt InitialMagnetisation_w$${w}.odt; \
 	done
 
 dynamics:
 	@for w in 0 25 50 75 100; do \
-		oommf boxsi -threads 4 -parameters "w $${w} INIT_STATE InitialMagnetisation_w$${w}.omf" OOMMF_dynamics.mif; \
+		tclsh /usr/local/oommf/oommf/oommf.tcl \
+		boxsi -threads 4 -parameters "w $${w} INIT_STATE InitialMagnetisation_w$${w}.omf" OOMMF_dynamics.mif; \
 		mkdir -p omfs_w$${w}; \
 		mv SWDynamics*.omf omfs_w$${w}/; \
 	done
 
 data:
 	@for w in 0 25 50 75 100; do \
-		oommf avf2ovf -grid irreg \
+		tclsh /usr/local/oommf/oommf/oommf.tcl \
+	   	avf2ovf -grid irreg \
 		InitialMagnetisation_w$${w}.omf > InitialMagnetisation_w$${w}_ordered.omf; \
 		python ../data_plot/OOMMF_generate_data.py \
 	   	--omfs "omfs_w$${w}" \
