--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -2,7 +2,7 @@ FROM joommf/oommf
 
 RUN apt-get -y update 
 RUN apt-get install -y git python3 python3-pip
-RUN pip3 install matplotlib pytest scipy ipywidgets numpy
+RUN pip3 install matplotlib pytest scipy ipywidgets numpy pandas
 
 RUN ln -s /usr/bin/python3 /usr/bin/python
 
