Modified scripts to generate plots. Added lato fonts

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,7 +1,7 @@
 FROM joommf/oommf
 
 RUN apt-get -y update 
-RUN apt-get install -y git python3 python3-pip
+RUN apt-get install -y git python3 python3-pip fonts-lato
 RUN pip3 install matplotlib pytest scipy ipywidgets numpy pandas
 
 RUN ln -s /usr/bin/python3 /usr/bin/python
