--- a/sim/Makefile
+++ b/sim/Makefile
@@ -6,7 +6,7 @@ all:
 
 relaxation:
 	@for w in 0 25 50 75 100; do \
-		tclsh /usr/local/oommf/oommf/oommf.tcl \
+		oommf \
 		boxsi -threads 4 -parameters "w $${w}" OOMMF_static.mif; \
 		mv InitialMagnetisation-Oxs*.omf InitialMagnetisation_w$${w}.omf; \
 		mv InitialMagnetisation.odt InitialMagnetisation_w$${w}.odt; \
@@ -14,7 +14,7 @@ relaxation:
 
 dynamics:
 	@for w in 0 25 50 75 100; do \
-		tclsh /usr/local/oommf/oommf/oommf.tcl \
+		oommf \
 		boxsi -threads 4 -parameters "w $${w} INIT_STATE InitialMagnetisation_w$${w}.omf" OOMMF_dynamics.mif; \
 		mkdir -p omfs_w$${w}; \
 		mv SWDynamics*.omf omfs_w$${w}/; \
@@ -22,7 +22,7 @@ dynamics:
 
 data:
 	@for w in 0 25 50 75 100; do \
-		tclsh /usr/local/oommf/oommf/oommf.tcl \
+		oommf \
 	   	avf2ovf -grid irreg \
 		InitialMagnetisation_w$${w}.omf > InitialMagnetisation_w$${w}_ordered.omf; \
 		python ../data_plot/OOMMF_generate_data.py \
